[gd_scene load_steps=8 format=3 uid="uid://cpnbusi28uhgw"]

[ext_resource type="FontFile" uid="uid://cok7kpyxwfkbj" path="res://assets/gui/fonts/Blazma-Regular.ttf" id="1_5gf2v"]
[ext_resource type="Script" path="res://scenes/ui/death_screen.gd" id="1_cj3w2"]
[ext_resource type="AudioStream" uid="uid://dgxcr3t1gql6y" path="res://assets/audio/effects/failure.mp3" id="2_tcc78"]

[sub_resource type="LabelSettings" id="LabelSettings_5iovr"]
font = ExtResource("1_5gf2v")
font_size = 128
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_yu1kr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.27451, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_jkarx"]
resource_name = "default"
length = 19.0
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rect:color")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4.55, 9, 11.13),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0.65098, 0, 0, 1), Color(0.65098, 0, 0, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("label:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.97, 12.34, 13.31),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/2/type = "audio"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("2_tcc78")
}],
"times": PackedFloat32Array(0)
}
tracks/2/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_406cg"]
_data = {
"RESET": SubResource("Animation_yu1kr"),
"default": SubResource("Animation_jkarx")
}

[node name="death_screen" type="CanvasLayer"]
layer = 100
script = ExtResource("1_cj3w2")

[node name="root" type="Control" parent="."]
top_level = true
z_index = 100
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="rect" type="ColorRect" parent="root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.27451, 0, 0, 0)

[node name="label" type="Label" parent="root"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "You Failed"
label_settings = SubResource("LabelSettings_5iovr")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="anim_player" type="AnimationPlayer" parent="root"]
libraries = {
"": SubResource("AnimationLibrary_406cg")
}
autoplay = "RESET"

[node name="audio" type="AudioStreamPlayer" parent="root"]
volume_db = -6.913
mix_target = 1

[connection signal="death_screen_done" from="." to="." method="_on_death_screen_done"]
[connection signal="animation_finished" from="root/anim_player" to="." method="_on_anim_player_animation_finished"]
